<resources>
    <string name="app_name">Books</string>

    <!-- First page strings. -->
    <!-- A subject search for message -->
    <string name="search_subject">Enter a subject of the book you are looking for "\u2026"</string>
    <!-- Edit text hint. -->
    <string name="edit_text_hint">Subject</string>
    <!-- Search button. -->
    <string name="search_button">search</string>

    <!-- Titles for titles for list view. -->
    <string name="book_title">Book title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>

    <!-- Empty books information. -->
    <string name="empty_book_info">No Books Information Available</string>

</resources>
