<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLinearLayoutStyle"
    tools:context="com.example.android.books.MainActivity">

    <TextView
        style="@style/MainStyle"
        android:text="@string/search_subject" />

    <EditText
        android:id="@+id/subject_to_search"
        style="@style/MainStyle"
        android:layout_marginBottom="16dp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
        android:hint="@string/edit_text_hint"
        android:textColor="@color/textColor" />

    <Button
        style="@style/MainStyle"
        android:background="@color/buttonColor"
        android:onClick="searchButton"
        android:text="@string/search_button" />
</LinearLayout>
